good enough for reading

--- a/10-clustering.Rmd
+++ b/10-clustering.Rmd
@@ -69,5 +69,16 @@ ggplot(data, aes(y = loyalty, x = csat, color = cluster)) +
 
 source: http://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation/
 
+## K-means clustering algorithm
+
+Watch the video linked to below for an explanation of the K-means clustering algorithm:
+- https://www.coursera.org/lecture/machine-learning-data-analysis/what-is-a-k-means-cluster-analysis-p94tY
+
+*note - when the add pops up to register for this course, you can just click to ignore it (i.e., no need to sign up to watch the entire video)*
+
 ## Additional readings:
-- Pages 385-390 and 404-405 of [Introduction to Statistical Learning with Applications in R](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
+
+
+- Pages 385-390 and 404-405 of [Introduction to Statistical Learning with Applications in R](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani and the companion video linked to below:
+
+<iframe width="840" height="473" src="https://www.youtube.com/embed/aIybuNt9ps4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
