added some more info to reading

--- a/10-clustering.Rmd
+++ b/10-clustering.Rmd
@@ -22,8 +22,9 @@ Another way to think about it is, that classification is really about predicting
 
 Another major difference between clustering and classification is in how success is determined. With classification we are able to use a test data set to assess prediction performance, in clustering we must use variance metrics to determine how well our defined clusters fit the data. The two metrics used to determine success are between- and within- variation. Ideally we want clusters where the between-variance is large (so that the clusters are well separated) and the within- variation is small (so that the clusters are composed of close/tight-knit observations).
 
-Below we show an example of an output of a K-means clustering analysis from a data set of customers where we have two explanatory variables: customer loyalty and customer satisfaction. From this analysis we identified 3 customer subgroups within our data set (note - we did not have these sub-group/cluster labels before we did our cluster analysis):
+### A toy example
 
+What if we had some customer data, and we wanted to learn more about the types of customers we had so that we could come up with better products and/or promotions to increase our business in a data-driven way. For example, let's consider this data below, where we have assessed customer loyalty and customer satisfaction:
 
 ```{r echo = FALSE, message = FALSE, warning = FALSE}
 library(tidyverse)
@@ -56,7 +57,17 @@ data <- tibble(loyalty = c(7, 5, 8, 7, 3, 1, 8, 4, 2, 7, 6, 7, 6, 5, 9, 7, 9, 5,
 #   kable_styling(bootstrap_options = c("striped", "hover", "condensed", "responsive", full_width = F))
 ```
 
+```{r Example, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
+ggplot(data, aes(y = loyalty, x = csat)) +
+  geom_point() +
+  xlab("Customer satisfaction") +
+  ylab("Loyalty") +
+  xlim(c(0, 10)) +
+  ylim(c(0, 10))
+```
+data modified from: http://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation/
 
+From this data we might ask whether there are sub-groups within our customers? For example do we have customers with high loyalty and high satisfaction? What about low satisfaction and high loyalty? One way to answer such a question is to apply K-means clustering analysis. When we do such an analysis on this data set we identify 3 customer subgroups within our data set:
 
 ```{r clusteringExample, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
 ggplot(data, aes(y = loyalty, x = csat, color = cluster)) +
@@ -67,7 +78,13 @@ ggplot(data, aes(y = loyalty, x = csat, color = cluster)) +
   ylim(c(0, 10))
 ```
 
-source: http://www.segmentationstudyguide.com/using-cluster-analysis-for-market-segmentation/
+What are the labels for these groups? We don't really have any, only cluster numbers are output from the clustering algorithm. In a simple case like this, where we can easily visualize the clusters on a scatter plot, we can give labels to these groups after clustering using the positions of the groups on the plot:
+
+- low loyalty and low satisfaction (<font color="#00BA38">green cluster</font>),
+- high loyalty and low satisfaction (<font color="#F8766D">pink cluster</font>), 
+- and high loyalty and high satisfaction (<font color="#619CFF">blue cluster</font>).
+
+Once we have such data we can use it to inform our future business decisions, and/or ask questions like, why did we not observe customers who had high satisfaction but low loyalty?
 
 ## K-means clustering algorithm
 
