--- a/bookdown-demo.Rmd
+++ b/bookdown-demo.Rmd
@@ -1,3 +1,231 @@
+--- 
+title: "Introduction to Data Science"
+author: 
+- Tiffany-Anne Timbers
+- Melissa Lee
+- Samuel Hinshaw
+date: "`r Sys.Date()`"
+site: bookdown::bookdown_site
+output: bookdown::gitbook
+documentclass: book
+bibliography: [book.bib, packages.bib]
+biblio-style: apalike
+link-citations: yes
+github-repo: rstudio/bookdown-demo
+description: "This is an open source textbook for teaching Introductory Data Science."
+---
+
+# Introduction to Data Science
+
+Placeholder
+
+
+## Chapter learning objectives
+## Jupyter notebooks
+## Loading a tabular dataset
+## Assigning value to an object
+## Subsetting data frames with `select` & `filter`
+### Using `select` to subset multiple columns
+### Using `select` to subset a range of columns
+### Using `filter` to subset a single column
+### Using `filter` to get rows with values above a threshold
+## Combining functions using the pipe operator: %>%
+### Using %>% to combine `filter` and `select`
+### Using %>% with more than two functions
+## Creating Visualizations in R
+### Using `ggplot` to create a scatter plot
+### Using `ggplot` to create a scatter plot
+### Formatting ggplot objects
+### Coloring points by group
+### What's next?
+
+<!--chapter:end:index.Rmd-->
+
+
+# Reading in data locally and from the web {#reading}
+
+Placeholder
+
+
+## Overview 
+## Chapter learning objectives
+## Absolute and relative file paths
+##### Loading `avocado_prices.csv` using a relative path:
+##### Loading `avocado_prices.csv` using an absolute path:
+## Reading tabular data into R
+### `read_delim` as a more flexible method to get tabular data into R
+### Reading tabular data directly from a URL
+### Previewing a data file before reading it into R
+## Scraping data off the web using R
+### HTML and CSS selectors
+### Are you allowed to scrape that website?
+### Using `rvest`
+## Additional readings/resources
+
+<!--chapter:end:01-reading.Rmd-->
+
+
+# Cleaning and wrangling data {#wrangling}
+
+Placeholder
+
+
+## Overview 
+## Chapter learning objectives
+## Vectors and Data frames
+### What is a data frame?
+### What is a vector?
+### How are vectors different from a list?
+### What does this have to do with data frames?
+## The `dplyr` functions
+## Tidy Data
+### What is tidy data?
+### Why is tidy data important in R?
+### Going from wide to long (or tidy!) using `gather`
+### Using separate to deal with multiple delimiters
+## Using `purrr`'s `map*` functions to iterate
+### A bit more about the `map*` functions
+## Additional readings/resources
+
+<!--chapter:end:02-wrangling.Rmd-->
+
+
+# Effective data visualization {#viz}
+
+Placeholder
+
+
+## Overview 
+## Chapter learning objectives
+## `ggplot2` for data visualization in R
+## Making effective vizualizations
+### Some guiding principles for making effectice visualizations
+
+<!--chapter:end:03-viz.Rmd-->
+
+
+# Version control with GitHub {#GitHub}
+
+Placeholder
+
+
+## Overview 
+## Videos to learn about version control with GitHub and Git
+### Creating a GitHub repository
+### Exploring a GitHub repository
+### Directly editing files on GitHub
+### Logging changes and pushing them to GitHub
+## Git command cheatsheet
+### Getting a repository from GitHub onto the server for the first time
+### Logging changes
+### Sending your changes back to GitHub
+### Getting changes
+## Terminal cheatsheet
+### See where you are:
+### See what is inside the directory where you are:
+### Move to a different directory
+
+<!--chapter:end:04-version_control.Rmd-->
+
+
+# Classification {#classification}
+
+Placeholder
+
+
+## Overview 
+## Learning objectives 
+## Classification
+## Wisconsin Breast Cancer Example:
+### Data Exploration
+#### Variable descriptions
+### K-Nearest Neighbour Classifier
+## Find the distance between new point and all others in dataset
+#### Distance Between Points When There are two explanatory variables/predictors
+##### Summary: 
+### K-Nearest Neighbours in R 
+### More than two explanatory variables/predictors
+## Additional readings/resources
+
+<!--chapter:end:05-classification.Rmd-->
+
+
+# Classification continued {#classification_continued}
+
+Placeholder
+
+
+## Overview 
+## Learning objectives 
+## Assessing how good your classifier is
+### Assessing your classifier in R
+#### Splitting into training and validation sets
+#### Creating the k-nn classifier
+#### Predict class labels for the validation set
+#### Assessing our classifier's accuracy
+## Cross-validation for assessing classifier quality
+## Choosing the number of neighbours for k-nn classification
+## Other ways to increase accuracy
+## Test data set
+## Scaling your data
+## Strengths and limitations of k-nn classification
+### Strengths of k-nn classification
+### Limitations of k-nn classification
+## Additional readings/resources
+
+<!--chapter:end:06-classification_continued.Rmd-->
+
+
+# Introduction to regression through K-nearest neighbours {#regression1}
+
+Placeholder
+
+
+## Overview 
+## Learning objectives 
+## Regression 
+## Sacremento real estate example
+## K-nearest neighbours regression
+## Assessing a knn regression model
+## How do different k's affect k-nn regression predictions
+## Assessing model goodness with the test set
+## Strengths and limitations of k-nn regression
+### Strengths of k-nn regression
+### Limitations of k-nn regression
+
+<!--chapter:end:07-regression1.Rmd-->
+
+
+# Regression, continued {#regression2}
+
+Placeholder
+
+
+## Overview 
+## Learning objectives 
+## $RMSE$ versus $RMPSE$
+## Linear regression
+## Linear regression in R using `caret`
+## Comparing linear and k-nn regression
+## Additional readings/resources
+
+<!--chapter:end:08-regression2.Rmd-->
+
+
+# Regression, continued some more... {#regression3}
+
+Placeholder
+
+
+## Overview 
+## Learning objectives 
+## Multivariate k-nn regression
+## Multivariate linear regression
+## The other side of regression
+## Additional readings/resources
+
+<!--chapter:end:09-regression3.Rmd-->
+
 # Clustering {#clustering}
 
 ## Overview 
@@ -90,7 +318,7 @@ Once we have such data we can use it to inform our future business decisions, an
 How does the K-means clustering algorithm work? Let's use the toy example shown above to illustrate it. First, we start by choosing $K$, the number of clusters. For this example we will choose 3. How do we choose $K$? It's an important question that we will answer later in this chapter. After choosing the number of clusters, we randomly assign each point to a cluster:
 
 ```{r clusteringRandomStart, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
-set.seed(123)
+set.seed(1234)
 possible <- c("1", "2", "3")
 data0 <- data %>% 
   mutate(cluster = sample(possible, 19, replace = TRUE))
@@ -233,10 +461,10 @@ it1 +
 Then we update cluster assignments of the points to the nearest cluster:
 
 ```{r iter2, echo = FALSE, warning = FALSE, fig.height = 4, fig.width = 5}
-data0 %>%  
-  mutate(dist_cent1 = dist(rbind(cent_1[1, 1:2], data0[, 1:2]))[1:19],
-         dist_cent2 = dist(rbind(cent_1[2, 1:2], data0[, 1:2]))[1:19],
-         dist_cent3 = dist(rbind(cent_1[3, 1:2], data0[, 1:2]))[1:19])
+data1 %>%  
+  mutate(dist_cent1 = dist(rbind(cent_1[1, 1:2], data1[, 1:2]))[1:19],
+         dist_cent2 = dist(rbind(cent_1[2, 1:2], data1[, 1:2]))[1:19],
+         dist_cent3 = dist(rbind(cent_1[3, 1:2], data1[, 1:2]))[1:19])
 
 data2 <- data1 %>% 
   mutate(cluster = c("2", "2", "2", "2", "2",
@@ -326,3 +554,6 @@ Watch the video linked to below for an explanation of the K-means clustering alg
 - Pages 385-390 and 404-405 of [Introduction to Statistical Learning with Applications in R](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani and the companion video linked to below:
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/aIybuNt9ps4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<!--chapter:end:10-clustering.Rmd-->
+
