--- a/10-clustering.Rmd
+++ b/10-clustering.Rmd
@@ -89,7 +89,7 @@ Once we have such data we can use it to inform our future business decisions, an
 Watch the video linked to below for an explanation of the K-means clustering algorithm:
 - https://www.coursera.org/lecture/machine-learning-data-analysis/what-is-a-k-means-cluster-analysis-p94tY
 
-*note - when the add pops up to register for this course, you can just click to ignore it (i.e., no need to sign up to watch the entire video)*
+*note - when the advertisement pops up to register for this course, you can just click to ignore it (i.e., no need to sign up to watch the entire video)*
 
 ## K-means clustering in R
 
