--- a/10-clustering.Rmd
+++ b/10-clustering.Rmd
@@ -155,7 +155,7 @@ head(clustering_statistics)
 
 Now that we have `tot.withinss` and `k` as columns in a data frame, we can make a plot to choose K:
 
-```{r plotToChooseK, fig.height = 4, fig.width = 4.35}
+```{r plotToChooseKforKmeans, fig.height = 4, fig.width = 4.35}
 elbow_plot <- ggplot(clustering_statistics, aes(x = k, y = tot.withinss)) +
   geom_point() +
   geom_line() +
