--- a/index.Rmd
+++ b/index.Rmd
@@ -6,12 +6,29 @@ author:
 - Melissa Lee
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
 documentclass: book
 bibliography: [sources.bib]
 biblio-style: apalike
 link-citations: yes
 description: "This is an open source textbook for teaching introductory data science."
+output:
+  bookdown::gitbook:
+    css: style.css
+    config:
+      toc:
+        before: |
+          <li><a href="./">Introduction to Data Science</a></li>
+        after: |
+          <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
+      edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
+      download: ["pdf", "epub"]
+  bookdown::pdf_book:
+    includes:
+      in_header: preamble.tex
+    latex_engine: xelatex
+    citation_package: natbib
+    keep_tex: yes
+  bookdown::epub_book: default
 ---
 
 # Introduction to Data Science
