made most of sam's ch6-11 changes

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -7,7 +7,7 @@ This chapter serves as an introduction to classification using K-nearest neighbo
 * Recognize situations where a simple classifier would be appropriate for making predictions.
 * Explain the k-nearest neighbour classification algorithm.
 * Interpret the output of a classifier.
-* Compute, by hand, the length of the ordinary, straight (Euclidian) distance line  between points on a graph when there are two explanatory variables/predictors.
+* Compute, by hand, the straight-line (Euclidean) distance between points on a graph when there are two explanatory variables/predictors.
 * Describe what a training data set is and how it is used in classification.
 * In a dataset with two explanatory variables/predictors, perform k-nearest neighbour classification in R using `caret::train(method = "knn", ...)` to predict the class of a single new observation.
 
@@ -323,7 +323,7 @@ predict(object = model_knn, new_obs)
 Our model classifies this new observation as malignant. How do we know how well our model did? In later sections, we will discuss ways to evaluate our model.
 
 ### More than two explanatory variables/predictors
-So far we have seen how to build a classifier based on only explanatory variables/predictors, but we can use k-nearest neighbours classifier in higher dimensional space. Let's make a scatterplot with 3 variables instead of 2: 
+So far we have seen how to build a classifier based on only explanatory variables/predictors, but we can use the k-nearest neighbours classifier in higher dimensional space. Let's make a scatterplot with 3 variables instead of 2: 
 
 ```{r, echo = F}
 library(plotly)
