removed reference to python code (doesn't exist)

--- a/index.Rmd
+++ b/index.Rmd
@@ -490,7 +490,7 @@ ggplot(prop_data, aes(x = med_income, y = med_prop_val)) +
 
 
 ### Coloring points by group
-Another common thing to do with scatter plots is to colour points by a group/category in the dataset. For example, if we combine our US state-level property, income and population data with the dataset of which party each state voted for in the 2016 US presidential election, we can colour the points in our previous scatter plot to represent who each stated voted for. In this example, we'll walk through code to accomplish this from loading the dataset to creating a visulazation. We will then take a look at the code required to do the same task in Python.
+Another common thing to do with scatter plots is to colour points by a group/category in the dataset. For example, if we combine our US state-level property, income and population data with the dataset of which party each state voted for in the 2016 US presidential election, we can colour the points in our previous scatter plot to represent who each stated voted for. In this example, we'll walk through code to accomplish this from loading the dataset to creating a visulazation. 
 
 First, we load the `tidyverse` library:
 
